src/kubernetes-engine/quick-start/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-quick-start
spec:
  selector:
    matchLabels:
      app: k8s-quick-start
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-quick-start
    spec:
      containers:
        - name: k8s-quick-start
          image: 'asia.gcr.io/shadowsocks-218808/k8s-quick-start:latest'
