src/kubernetes-engine/quick-start/k8s/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-quick-start
spec:
  type: LoadBalancer
  selector:
    app: k8s-quick-start
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 8080
