src/kubernetes-engine/quick-start/k8s/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mc-service
spec:
  type: NodePort
  selector:
    app: products
    department: sales
  ports:
    - name: my-first-port
      protocol: TCP
      port: 60000
      targetPort: 8080
