src/kubernetes-engine/quick-start/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  tls:
    - secretName: my-first-secret
  rules:
    - host: your-store.example
      http:
        paths:
          - backend:
              serviceName: my-mc-service
              servicePort: my-first-port
